--- a/package.json
+++ b/package.json
@@ -24,14 +24,17 @@
   "dependencies": {
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
+    "@types/multer": "^1.4.7",
     "@types/uuid": "^9.0.2",
     "cors": "^2.8.5",
+    "csv-parser": "^3.0.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "firebase": "^9.21.0",
     "firebase-admin": "^11.8.0",
     "joi": "^17.9.2",
     "jsonwebtoken": "^9.0.0",
+    "multer": "^1.4.5-lts.1",
     "uuid": "^9.0.0"
   }
 }
